--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ keywords: 提笔忘字, 博客
 description: >-
   正是江南好风景，落花时节又逢君。
 lang: zh-CN
-timezone:  	Asia/Shanghai
+timezone: Asia/Shanghai
+
 #repo: https://github.com/onepase/Ephesus # site repo [optional]
 #google_verify:      XXX # Put your Google Verification here
 #google_analytics:   UA-XXXXXXXX-00 # Put your Google Analytics code
@@ -21,6 +22,14 @@ author:
   linkedin: xieziyao # linkedin username
   email: ziyaoxie@outlook.com # email address
 
+gitalk:
+  enable: true # 总开关，控制gitalk功能是否开启
+  clientId: 084594950ca06b86a714
+  clientSecret: 97f004b4b080ac66be952afa032acb4dd39aa4eb
+  repo: ziyaoxie.github.io
+  owner: ziyaoxie
+  admin: ziyaoxie
+#  distractionFreeMode: true # 若设置为true，则当在评论框输入时，周围区域会变暗
 
 # URL settings
 baseurl: "" # sub folder for jekyll site. only if jekyll site not in root of host. leave blank if not wishd. always add / in front.
