_posts: Add 2023-09-18-jekyll-with-rouge.md
Signed-off-by: ziyaoxie <ziyaoxie@outlook.com>

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author:
   picture: assets/images/profile.jpg
   twitter: XieZiyao # twitter username
   github: ziyaoxie # github username
+  linkedin: xieziyao # linkedin username
   email: ziyaoxie@outlook.com # email address
 
 gitalk:
