site: Update time format
Signed-off-by: ziyaoxie <ziyaoxie@outlook.com>

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ timezone: Asia/Shanghai
 
 # Author settings
 author:
-  name: Xie Ziyao
+  name: 提笔忘字
   bio: CSer @NJU <br> Open Source @LTP <br> Computer Engineer @Tencent
   picture: assets/images/profile.jpg
   twitter: XieZiyao # twitter username
